# OPC5-Maintenez_et_documentez_un_systeme_de_stockage_des_donnees_securise_et_performant

./: .dockerignore  .env  .env.example  .gitattributes  .gitignore  DECISIONS.md  Dockerfile.migrator  README.md  docker-compose.yml  main.py  module_arbo.txt  pyproject.toml  requirements.txt
docker/: Dockerfile  docker-compose.yml
docker/mongo-init/: init.js
docs/: Présentation.pptx  aws_recherche.md  aws_research.md  security_tests.md
mongo-init/: init-users.js
notebooks/: 01_exploration_dataset.ipynb
src/: __init__.py  config.py  crud.py  crud_demo.py  export.py  migrate.py  migrate_validate.py
tests/: conftest.py  test_csv_integrity.py  test_export.py  test_migration_integration.py  test_mongo_integrity.py  test_transform.py  test_validation.py
