[project]
name = "opc5-maintenez-et-documentez-un-systeme-de-stockage-des-donnees-securise-et-performant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=3.0.2",
    "pymongo>=4.16.0",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
]
