[project]
name = "opc5-maintenez-et-documentez-un-systeme-de-stockage-des-donnees-securise-et-performant"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "pandas>=3.0.2",
    "pymongo>=4.17.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
]
